Fix contrast of button icons in Dark theme (use theme colors)

--- a/styles/themes/classic.css
+++ b/styles/themes/classic.css
@@ -309,6 +309,27 @@ body,
 	outline-offset: 2px;
 }
 
+.font-box .toggle .icon::after {
+	content: '';
+	display: block;
+	width: 16px;
+	height: 16px;
+}
+
+
+.font-box .toggle:enabled > span {
+	-webkit-mask-image: url("../../images/text-tools.png");
+	-webkit-mask-position: calc(-16px * var(--icon-index)) 0;
+	mask-image: url("../../images/text-tools.png");
+	mask-position: calc(-16px * var(--icon-index)) 0;
+	background-color: currentColor;
+}
+.font-box .toggle:disabled > span {
+	background-image: url("../../images/text-tools.png");
+	background-position: calc(-16px * var(--icon-index)) 0;
+	filter: saturate(0%) opacity(50%); /* fallback */
+	filter: url("#disabled-inset-filter");
+}
 
 .tool-window .window-titlebar {
 	font-size: 12px;
